Update screenshot mock creator

--- a/src/desktop/webpack.config/index.html
+++ b/src/desktop/webpack.config/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width" />
 <title></title>
-<link href="css/main.css" rel="stylesheet" type="text/css">
+<link href="/css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="root"></div>
 <div id="modal"></div>
 </div>
-<script src="bundle.js"></script>
+<script src="/bundle.js"></script>
 </body>
 </html>
